--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- card kalkulator-->
     <div id="kalkulator">
         <div class="form">
-            <h2>Check Your BMI</h2>
+            <h2>Check Your <span>BMI</span></h2>
             <p>Masukkan tinggi badan dan berat badan lalu cek hasilnya.</p>
             <!-- input nilai tinggi-->
             <div class="form-element">
